# Modul-9-Software-Architectures

./: .gitignore
tutorial8/: README.md
tutorial8/subscriber/: Cargo.toml
tutorial8/subscriber/src/: main.rs
