[package]
name = "subscriber"
version = "0.1.0"
edition = "2021"

[dependencies]
amiquip = "0.4.2"
crosstown_bus = "0.5.3"
futures = "0.3"
borsh = "0.9.3"
borsh-derive = "0.9.1"
tokio = {version="1.21.2", features=["full"]}

[patch.crates-io]
mio = { git = "https://github.com/quininer/mio", branch = "v0.6.x" }